...
import 'package:restaurant_app_flutter/widget/custom_android_app_bar.dart';
import 'package:restaurant_app_flutter/widget/empty_list.dart';
import 'package:restaurant_app_flutter/widget/no_connection_widget.dart';
import 'package:restaurant_app_flutter/widget/platform_widget.dart';

class RestaurantListPage extends StatelessWidget {
  static const title = 'Restaurant';

  Widget _buildList() {
    return Column(
      mainAxisAlignment: MainAxisAlignment.start,
      children: [
        Expanded(
...
          children: [
            Text(
              title,
              style: textStyle.copyWith(fontSize: 22),
            ),
            IconButton(
              key: Key('search'),
              icon: Icon(CupertinoIcons.search),
              onPressed: () {
                Navigation.intentRoute(_createRouteToSearch());
              },
            )
          ],
...
