...
                        ),
                      ),
                      Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          IconButton(
                            key: Key('back'),
                            icon: Icon(
                              CupertinoIcons.arrow_left,
                              size: 26,
                            ),
                            onPressed: () {
                              Navigation.back();
...
                            builder: (context, stateFav, _) {
                              return FutureBuilder<bool>(
                                future: stateFav.isFavorite(state.result.id),
                                builder: (context, snapshot) {
                                  var isFavorite = snapshot.data ?? false;
                                  return IconButton(
                                    key: Key('add to favorite'),
                                    icon: Icon(
                                      isFavorite
                                          ? CupertinoIcons.heart_fill
                                          : CupertinoIcons.heart,
                                      color: Colors.pinkAccent,
                                    ),
...
