...
  ];

  List<BottomNavigationBarItem> _bottomBarItem = [
    BottomNavigationBarItem(
        icon: Icon(CupertinoIcons.house_fill), label: RestaurantListPage.title),
    BottomNavigationBarItem(
        icon: Icon(CupertinoIcons.heart_fill), label: 'Favorite'),
    BottomNavigationBarItem(
        icon: Icon(Platform.isIOS ? CupertinoIcons.settings : Icons.settings),
        label: SettingPage.title)
  ];

  Widget _buildAndroid(BuildContext context) {
...
